# just

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs  cargo  example.js  index.js  maidfile  maidfile.toml  package.yml  package_tmp.yml  project.yml
.nova/: Configuration.json
crates/go/: Cargo.toml  build.rs
crates/go/src/: helpers.rs  lib.rs
crates/go/src/embed/: go.mod  main.go
crates/go/src/embed/cmd/: fs.go
crates/macros/: Cargo.toml
crates/macros/src/: expression.rs  format.rs  function.rs  interface.rs  lib.rs
crates/state/: Cargo.toml
crates/state/src/: error.rs  get.rs  lib.rs  permissions.rs
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/deno_core/modules/: trait.ModuleLoader.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/v8/fast_api/: trait.FastFunction.js
html/test/: index.html
src/: cli.rs  cmd.rs  compile.rs  core.rs  db.rs  fs.rs  go.rs  helpers.rs  http.rs  loader.rs  logger.rs  macros.rs  main.rs  modify.rs  os.rs  permissions.rs  runtime.js  serve.rs  state.rs  tasks.rs
src/embed/: external  main.go
src/embed/commands/: fs.go
src/go/: helpers.rs  mod.rs
src/go/embed/: external  go.mod  go.sum
src/go/embed/cmd/: eval.go  root.go
src/ops/: cmd.rs  core.rs  db.rs  fs.rs  go.rs  http.rs  kv.rs  mod.rs  modify.rs  net.rs  os.rs  serve.rs
src/ops/db/: kv.rs  mod.rs  sqlite.rs
src/ops/sys/: cmd.rs  env.rs  mod.rs  os.rs
src/platform/: compile.rs  mod.rs
src/project/: create.rs  init.rs  mod.rs  package.rs  tasks.rs  tests.rs
src/registry/: auth.rs  manager.rs  mod.rs  package.rs
src/runtime/: helpers.js  main.js  mod.js  mod.rs
src/runtime/core/: format.js  go.js  helpers.js  init.js  system.js
src/runtime/lib/: core.js  http.js  io.js  net.js  sys.js  system.js
src/runtime/lib/crypto/: enc.js  index.js
src/runtime/lib/db/: kv.js  sqlite.js
src/runtime/src/: core.js  format.js  log.js  process.js
src/runtime/util/: cli.js  cmd.js  core.js  db.js  ext.js  extra.js  http.js  log.js  misc.js  native.js  string.js  system.js  test.js
testing/: demo.txt  hello.js  main.js  pkg.js  pkg.json  project.tgz  std.tgz  test.js
tests/: bench.js  cmd.js  console.js  demo.txt  ext.js  extra.js  http.js  import.js  import_loop.js  import_web.js  main.js  package.js  package.yml  serve.js  sqlite.js  test.db  uuid.js
tests/files/: test.db
tests/files/html/: index.html
tests/javascript/: bench.js  db_format.js  ext.js  import.js  import_loop.js
tests/new/: .env  db.js  env.ci  env.js  go.js  http.go  imports.js  index.js  index.jsx  index.min.js  index.small.js  json.db.js  kv.js  main.go  net.js  net.ts  os.js  package.yml  perm.js  serve.ts  setup.js  static.js
tests/new/jsx/: preact.jsx  styles.css
tests/new/test-package/: index.js  package.yml
tests/old/files/: demo.json
tests/old/javascript/: cmd.js  ext.js  serve.js  sqlite.js
tests/old/typescript/: test.ts  test.tsx
tests/typescript/: test.tsx
ver_db/: db  snap.00000000000001A8
