[package]
name = "justjs"
version = "0.4.4"
edition = "2021"
license = "MIT"
homepage = "https://justjs.dev"
repository = "https://github.com/exact-rs/just"
description = "A modern runtime for javascript."

[[bin]]
name = "just"
path = "src/main.rs"

[dependencies]
rayon = "1"
colored = "2"
url = "2.3.1"
rand = "0.8.5"
tar = "0.4.38"
dirs = "4.0.0"
iron = "0.6.1"
home = "0.5.4"
open = "3.2.0"
mount = "0.4.0"
sha2 = "0.10.6"
brown = "0.2.0"
regex = "1.7.0"
atty = "0.2.14"
libc = "0.2.137"
nanoid = "0.4.0"
flate2 = "1.0.25"
anyhow = "1.0.66"
hostname = "^0.3"
sqlite = "0.30.1"
serde = "1.0.147"
inquire = "0.5.2"
sysinfo = "0.26.7"
question = "0.2.2"
data-url = "0.2.0"
tracing = "0.1.37"
console = "0.15.2"
rustyline = "9.1.2"
indicatif = "0.17.2"
staticfile = "0.5.0"
once_cell = "1.10.0"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
zip-extract = "0.1.1"
thread_local = "1.1.4"
futures-util = "0.3.25"
v_htmlescape = "0.15.8"
data-encoding = "2.3.2"
duration-string = "0.1.1" 
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "4.0.27", features = ["derive"] }
shell = { version = "0.2.0", package = "rust-shell" }
engine = { package = "deno_core", version = "0.160.0" }
ast = { package = "deno_ast", version = "0.21.0", features = ["transpiling"] }
reqwest = { version = "0.11.12", features = ["blocking", "json", "multipart", "stream"] }

[build-dependencies]
sha2 = "0.10.6"
chrono = "0.4.23"
anyhow = "1.0.66"
data-encoding = "2.3.2"