[package]
name = "justjs"
version = "0.5.2"
edition = "2021"
license = "MIT"
homepage = "https://justjs.dev"
repository = "https://github.com/exact-rs/just"
description = "A modern runtime for javascript."

[[bin]]
name = "just"
path = "src/main.rs"

[dependencies]
# local
state = { package = "just_state", path = "./crates/state", version = "0.1.3" }
macros = { package = "just_macros", path = "./crates/macros", version = "0.1.1" }

# remote
colored = "2"
url = "2.3.1"
hex = "0.4.3"
tar = "0.4.38"
dirs = "4.0.0"
home = "0.5.4"
open = "3.2.0"
warp = "0.3.3"
log = "0.4.17"
sha2 = "0.10.6"
brown = "0.2.0"
sled = "0.34.7"
libc = "0.2.137"
nanoid = "0.4.0"
base64 = "0.20.0"
flate2 = "1.0.25"
anyhow = "1.0.66"
sqlite = "0.30.1"
serde = "1.0.147"
inquire = "0.5.2"
question = "0.2.2"
data-url = "0.2.0"
termcolor = "1.2.0"
rustyline = "9.1.2"
indicatif = "0.17.2"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
zip-extract = "0.1.1"
exact-panic = "0.0.6"
env_logger = "0.10.0"
esbuild-rs = "0.13.8"
futures-util = "0.3.25"
v_htmlescape = "0.15.8"
data-encoding = "2.3.2"
async-process = "1.6.0"
duration-string = "0.1.1" 
clap-verbosity-flag = "2.0.0"
tokio = { version = "1.24.2", features = ["full"] }
clap = { version = "4.0.27", features = ["derive"] }
shell = { version = "0.2.0", package = "rust-shell" }
engine = { package = "deno_core", version = "0.160.0" }
uuid = { version = "0.8.0", features = ["v4"], default-features = false }
ast = { package = "deno_ast", version = "0.21.0", features = ["transpiling"] }
reqwest = { version = "0.11.12", features = ["blocking", "json", "multipart", "stream"] }

[build-dependencies]
chrono = "0.4.23"
